--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -11,124 +11,125 @@
         Title="{Binding Current_Db}"
         x:Name="MainWindow"
         Background="#ffffff">
-	<DockPanel>
-		<Menu Height="20" DockPanel.Dock="Top">
+    <DockPanel>
+        <Menu Height="20" DockPanel.Dock="Top">
             <MenuItem Header="_Импорт" FontSize="14">
-        <MenuItem Header="Из RAODB" Command="{Binding ImportForm}"/>
-        <MenuItem Header="Из Excel" Command="{Binding ImportFrom}"/>
-      </MenuItem>
-      <MenuItem Header="_Excel" FontSize="14">
-		<MenuItem Header="Паспорта">
-          <MenuItem Header="Отчеты без паспортов" Command="{Binding ExcelMissingPas}"></MenuItem>
-          <MenuItem Header="Паспорта без отчетов" Command="{Binding ExcelPasWithoutRep}"></MenuItem>
-          <MenuItem Header="Изменить расположение паспортов по умолчанию" Command="{Binding ChangePasDir}"></MenuItem>
-        </MenuItem>  
-		<MenuItem Header="Список организаций" Command="{Binding AllOrganization_Excel_Export}"></MenuItem>
-		<MenuItem Header="Список форм 1" Command="{Binding AllForms1_Excel_Export}"></MenuItem>
-		<MenuItem Header="Список форм 2" Command="{Binding AllForms2_Excel_Export}"></MenuItem>
-		<MenuItem Header="Разрывы и пересечения" Command="{Binding Statistic_Excel_Export}"></MenuItem>
-        <MenuItem Header="Формы 1">
-          <MenuItem Header="Форма 1.1" Command="{Binding All_Excel_Export}" CommandParameter="1.1"></MenuItem>
-          <MenuItem Header="Форма 1.2" Command="{Binding All_Excel_Export}" CommandParameter="1.2"></MenuItem>
-          <MenuItem Header="Форма 1.3" Command="{Binding All_Excel_Export}" CommandParameter="1.3"></MenuItem>
-          <MenuItem Header="Форма 1.4" Command="{Binding All_Excel_Export}" CommandParameter="1.4"></MenuItem>
-          <MenuItem Header="Форма 1.5" Command="{Binding All_Excel_Export}" CommandParameter="1.5"></MenuItem>
-          <MenuItem Header="Форма 1.6" Command="{Binding All_Excel_Export}" CommandParameter="1.6"></MenuItem>
-          <MenuItem Header="Форма 1.7" Command="{Binding All_Excel_Export}" CommandParameter="1.7"></MenuItem>
-          <MenuItem Header="Форма 1.8" Command="{Binding All_Excel_Export}" CommandParameter="1.8"></MenuItem>
-          <MenuItem Header="Форма 1.9" Command="{Binding All_Excel_Export}" CommandParameter="1.9"></MenuItem>
-        </MenuItem>
-        <MenuItem Header="Формы 2">
-          <MenuItem Header="Форма 2.1" Command="{Binding All_Excel_Export}" CommandParameter="2.1"></MenuItem>
-          <MenuItem Header="Форма 2.2" Command="{Binding All_Excel_Export}" CommandParameter="2.2"></MenuItem>
-          <MenuItem Header="Форма 2.3" Command="{Binding All_Excel_Export}" CommandParameter="2.3"></MenuItem>
-          <MenuItem Header="Форма 2.4" Command="{Binding All_Excel_Export}" CommandParameter="2.4"></MenuItem>
-          <MenuItem Header="Форма 2.5" Command="{Binding All_Excel_Export}" CommandParameter="2.5"></MenuItem>
-          <MenuItem Header="Форма 2.6" Command="{Binding All_Excel_Export}" CommandParameter="2.6"></MenuItem>
-          <MenuItem Header="Форма 2.7" Command="{Binding All_Excel_Export}" CommandParameter="2.7"></MenuItem>
-          <MenuItem Header="Форма 2.8" Command="{Binding All_Excel_Export}" CommandParameter="2.8"></MenuItem>
-          <MenuItem Header="Форма 2.9" Command="{Binding All_Excel_Export}" CommandParameter="2.9"></MenuItem>
-          <MenuItem Header="Форма 2.10" Command="{Binding All_Excel_Export}" CommandParameter="2.10"></MenuItem>
-          <MenuItem Header="Форма 2.11" Command="{Binding All_Excel_Export}" CommandParameter="2.11"></MenuItem>
-          <MenuItem Header="Форма 2.12" Command="{Binding All_Excel_Export}" CommandParameter="2.12"></MenuItem>
-        </MenuItem>
-		  <MenuItem Header="Выбранная организация">
-			  <MenuItem Header="Формы 1">
-				  <MenuItem Header="Форма 1.1" Command="{Binding All_Excel_Export}" CommandParameter="Org1.1"></MenuItem>
-				  <MenuItem Header="Форма 1.2" Command="{Binding All_Excel_Export}" CommandParameter="Org1.2"></MenuItem>
-				  <MenuItem Header="Форма 1.3" Command="{Binding All_Excel_Export}" CommandParameter="Org1.3"></MenuItem>
-				  <MenuItem Header="Форма 1.4" Command="{Binding All_Excel_Export}" CommandParameter="Org1.4"></MenuItem>
-				  <MenuItem Header="Форма 1.5" Command="{Binding All_Excel_Export}" CommandParameter="Org1.5"></MenuItem>
-				  <MenuItem Header="Форма 1.6" Command="{Binding All_Excel_Export}" CommandParameter="Org1.6"></MenuItem>
-				  <MenuItem Header="Форма 1.7" Command="{Binding All_Excel_Export}" CommandParameter="Org1.7"></MenuItem>
-				  <MenuItem Header="Форма 1.8" Command="{Binding All_Excel_Export}" CommandParameter="Org1.8"></MenuItem>
-				  <MenuItem Header="Форма 1.9" Command="{Binding All_Excel_Export}" CommandParameter="Org1.9"></MenuItem>
-			  </MenuItem>
-			  <MenuItem Header="Формы 2">
-				  <MenuItem Header="Форма 2.1" Command="{Binding All_Excel_Export}" CommandParameter="Org2.1"></MenuItem>
-				  <MenuItem Header="Форма 2.2" Command="{Binding All_Excel_Export}" CommandParameter="Org2.2"></MenuItem>
-				  <MenuItem Header="Форма 2.3" Command="{Binding All_Excel_Export}" CommandParameter="Org2.3"></MenuItem>
-				  <MenuItem Header="Форма 2.4" Command="{Binding All_Excel_Export}" CommandParameter="Org2.4"></MenuItem>
-				  <MenuItem Header="Форма 2.5" Command="{Binding All_Excel_Export}" CommandParameter="Org2.5"></MenuItem>
-				  <MenuItem Header="Форма 2.6" Command="{Binding All_Excel_Export}" CommandParameter="Org2.6"></MenuItem>
-				  <MenuItem Header="Форма 2.7" Command="{Binding All_Excel_Export}" CommandParameter="Org2.7"></MenuItem>
-				  <MenuItem Header="Форма 2.8" Command="{Binding All_Excel_Export}" CommandParameter="Org2.8"></MenuItem>
-				  <MenuItem Header="Форма 2.9" Command="{Binding All_Excel_Export}" CommandParameter="Org2.9"></MenuItem>
-				  <MenuItem Header="Форма 2.10" Command="{Binding All_Excel_Export}" CommandParameter="Org2.10"></MenuItem>
-				  <MenuItem Header="Форма 2.11" Command="{Binding All_Excel_Export}" CommandParameter="Org2.11"></MenuItem>
-				  <MenuItem Header="Форма 2.12" Command="{Binding All_Excel_Export}" CommandParameter="Org2.12"></MenuItem>
-			  </MenuItem>
-			  <MenuItem Header="Все формы" Command="{Binding SelectOrgExcelExport}"/>
-		  </MenuItem>
-      </MenuItem>
-    </Menu>
-    <Panel Margin="5,5,5,5" x:Name="MainPanel" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-      <TabControl SelectedIndex="{Binding FormModel_Local.ChooseTab}">
-        <TabItem x:Name="Forms1" Header="Формы 1">
-          <Panel x:Name="Forms_p1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <Grid>
-              <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" MinHeight="200"/>
-                <RowDefinition Height="*"/>
-              </Grid.RowDefinitions>
-              <Grid Grid.Row="0">
-                <Grid.ColumnDefinitions>
-                  <ColumnDefinition Width="3*"/>
-                  <ColumnDefinition Width="2.7*" MaxWidth="460"/>
-                </Grid.ColumnDefinitions>
-                <ScrollViewer>
-                  <Panel x:Name="Forms_p1_0" HorizontalAlignment="Stretch" Grid.Column="0">
-				  </Panel>
-                </ScrollViewer>
-                <Panel x:Name="Forms_p1_B" HorizontalAlignment="Stretch"  Grid.Column="1"/>
-              </Grid>
-              <Panel Margin="0,5,0,0" x:Name="Forms_p1_X" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Row="1">
-	          </Panel>  
-            </Grid>
-          </Panel>
-        </TabItem>
-        <TabItem x:Name="Forms2" Header="Формы 2">
-          <Panel x:Name="Forms_p2" VerticalAlignment="Stretch" >
-            <Grid>
-              <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" MinHeight="220"/>
-                <RowDefinition Height="*"/>
-              </Grid.RowDefinitions>
-              <Grid Grid.Row="0">
-                <Grid.ColumnDefinitions>
-                  <ColumnDefinition Width="3*"/>
-                  <ColumnDefinition Width="2.2*" MaxWidth="625"/>
-                </Grid.ColumnDefinitions>
-                <ScrollViewer>
-                  <Panel x:Name="Forms_p2_0" Grid.Column="0"/>
-                </ScrollViewer>
-                <Panel x:Name="Forms_p2_B" Grid.Column="1"/>
-              </Grid>
-              <Panel Margin="0,5,0,0" x:Name="Forms_p2_X" VerticalAlignment="Stretch" Grid.Row="1"/>
-            </Grid>
-          </Panel>
-        </TabItem>
-      </TabControl>
-    </Panel>
-	</DockPanel>
+                <MenuItem Header="Из RAODB" Command="{Binding ImportForm}" />
+                <MenuItem Header="Из Excel" Command="{Binding ImportFrom}" />
+            </MenuItem>
+            <MenuItem Header="_Excel" FontSize="14">
+                <MenuItem Header="Паспорта">
+                    <MenuItem Header="Отчеты без паспортов" Command="{Binding ExcelMissingPas}"></MenuItem>
+                    <MenuItem Header="Паспорта без отчетов" Command="{Binding ExcelPasWithoutRep}"></MenuItem>
+                    <MenuItem Header="Изменить расположение паспортов по умолчанию" Command="{Binding ChangePasDir}"></MenuItem>
+                </MenuItem>
+                <MenuItem Header="Список организаций" Command="{Binding AllOrganization_Excel_Export}"></MenuItem>
+                <MenuItem Header="Список форм 1" Command="{Binding AllForms1_Excel_Export}"></MenuItem>
+                <MenuItem Header="Список форм 2" Command="{Binding AllForms2_Excel_Export}"></MenuItem>
+                <MenuItem Header="Разрывы и пересечения" Command="{Binding Statistic_Excel_Export}"></MenuItem>
+                <MenuItem Header="Формы 1">
+                    <MenuItem Header="Форма 1.1" Command="{Binding All_Excel_Export}" CommandParameter="1.1"></MenuItem>
+                    <MenuItem Header="Форма 1.2" Command="{Binding All_Excel_Export}" CommandParameter="1.2"></MenuItem>
+                    <MenuItem Header="Форма 1.3" Command="{Binding All_Excel_Export}" CommandParameter="1.3"></MenuItem>
+                    <MenuItem Header="Форма 1.4" Command="{Binding All_Excel_Export}" CommandParameter="1.4"></MenuItem>
+                    <MenuItem Header="Форма 1.5" Command="{Binding All_Excel_Export}" CommandParameter="1.5"></MenuItem>
+                    <MenuItem Header="Форма 1.6" Command="{Binding All_Excel_Export}" CommandParameter="1.6"></MenuItem>
+                    <MenuItem Header="Форма 1.7" Command="{Binding All_Excel_Export}" CommandParameter="1.7"></MenuItem>
+                    <MenuItem Header="Форма 1.8" Command="{Binding All_Excel_Export}" CommandParameter="1.8"></MenuItem>
+                    <MenuItem Header="Форма 1.9" Command="{Binding All_Excel_Export}" CommandParameter="1.9"></MenuItem>
+                </MenuItem>
+                <MenuItem Header="Формы 2">
+                    <MenuItem Header="Форма 2.1" Command="{Binding All_Excel_Export}" CommandParameter="2.1"></MenuItem>
+                    <MenuItem Header="Форма 2.2" Command="{Binding All_Excel_Export}" CommandParameter="2.2"></MenuItem>
+                    <MenuItem Header="Форма 2.3" Command="{Binding All_Excel_Export}" CommandParameter="2.3"></MenuItem>
+                    <MenuItem Header="Форма 2.4" Command="{Binding All_Excel_Export}" CommandParameter="2.4"></MenuItem>
+                    <MenuItem Header="Форма 2.5" Command="{Binding All_Excel_Export}" CommandParameter="2.5"></MenuItem>
+                    <MenuItem Header="Форма 2.6" Command="{Binding All_Excel_Export}" CommandParameter="2.6"></MenuItem>
+                    <MenuItem Header="Форма 2.7" Command="{Binding All_Excel_Export}" CommandParameter="2.7"></MenuItem>
+                    <MenuItem Header="Форма 2.8" Command="{Binding All_Excel_Export}" CommandParameter="2.8"></MenuItem>
+                    <MenuItem Header="Форма 2.9" Command="{Binding All_Excel_Export}" CommandParameter="2.9"></MenuItem>
+                    <MenuItem Header="Форма 2.10" Command="{Binding All_Excel_Export}" CommandParameter="2.10"></MenuItem>
+                    <MenuItem Header="Форма 2.11" Command="{Binding All_Excel_Export}" CommandParameter="2.11"></MenuItem>
+                    <MenuItem Header="Форма 2.12" Command="{Binding All_Excel_Export}" CommandParameter="2.12"></MenuItem>
+                </MenuItem>
+                <MenuItem Header="Выбранная организация">
+                    <MenuItem Header="Формы 1">
+                        <MenuItem Header="Форма 1.1" Command="{Binding All_Excel_Export}" CommandParameter="Org1.1"></MenuItem>
+                        <MenuItem Header="Форма 1.2" Command="{Binding All_Excel_Export}" CommandParameter="Org1.2"></MenuItem>
+                        <MenuItem Header="Форма 1.3" Command="{Binding All_Excel_Export}" CommandParameter="Org1.3"></MenuItem>
+                        <MenuItem Header="Форма 1.4" Command="{Binding All_Excel_Export}" CommandParameter="Org1.4"></MenuItem>
+                        <MenuItem Header="Форма 1.5" Command="{Binding All_Excel_Export}" CommandParameter="Org1.5"></MenuItem>
+                        <MenuItem Header="Форма 1.6" Command="{Binding All_Excel_Export}" CommandParameter="Org1.6"></MenuItem>
+                        <MenuItem Header="Форма 1.7" Command="{Binding All_Excel_Export}" CommandParameter="Org1.7"></MenuItem>
+                        <MenuItem Header="Форма 1.8" Command="{Binding All_Excel_Export}" CommandParameter="Org1.8"></MenuItem>
+                        <MenuItem Header="Форма 1.9" Command="{Binding All_Excel_Export}" CommandParameter="Org1.9"></MenuItem>
+                    </MenuItem>
+                    <MenuItem Header="Формы 2">
+                        <MenuItem Header="Форма 2.1" Command="{Binding All_Excel_Export}" CommandParameter="Org2.1"></MenuItem>
+                        <MenuItem Header="Форма 2.2" Command="{Binding All_Excel_Export}" CommandParameter="Org2.2"></MenuItem>
+                        <MenuItem Header="Форма 2.3" Command="{Binding All_Excel_Export}" CommandParameter="Org2.3"></MenuItem>
+                        <MenuItem Header="Форма 2.4" Command="{Binding All_Excel_Export}" CommandParameter="Org2.4"></MenuItem>
+                        <MenuItem Header="Форма 2.5" Command="{Binding All_Excel_Export}" CommandParameter="Org2.5"></MenuItem>
+                        <MenuItem Header="Форма 2.6" Command="{Binding All_Excel_Export}" CommandParameter="Org2.6"></MenuItem>
+                        <MenuItem Header="Форма 2.7" Command="{Binding All_Excel_Export}" CommandParameter="Org2.7"></MenuItem>
+                        <MenuItem Header="Форма 2.8" Command="{Binding All_Excel_Export}" CommandParameter="Org2.8"></MenuItem>
+                        <MenuItem Header="Форма 2.9" Command="{Binding All_Excel_Export}" CommandParameter="Org2.9"></MenuItem>
+                        <MenuItem Header="Форма 2.10" Command="{Binding All_Excel_Export}" CommandParameter="Org2.10"></MenuItem>
+                        <MenuItem Header="Форма 2.11" Command="{Binding All_Excel_Export}" CommandParameter="Org2.11"></MenuItem>
+                        <MenuItem Header="Форма 2.12" Command="{Binding All_Excel_Export}" CommandParameter="Org2.12"></MenuItem>
+                    </MenuItem>
+                    <MenuItem Header="Все формы" Command="{Binding SelectOrgExcelExport}" />
+                </MenuItem>
+            </MenuItem>
+        </Menu>
+        <Panel Margin="5,5,5,5" x:Name="MainPanel" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <TabControl SelectedIndex="{Binding FormModel_Local.ChooseTab}">
+                <TabItem x:Name="Forms1" Header="Формы 1">
+                    <Panel x:Name="Forms_p1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" MinHeight="200" />
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+                            <Grid Grid.Row="0">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="3*" />
+                                    <ColumnDefinition Width="2.7*" MaxWidth="460" />
+                                </Grid.ColumnDefinitions>
+                                <ScrollViewer>
+                                    <Panel x:Name="Forms_p1_0" HorizontalAlignment="Stretch">
+                                    </Panel>
+                                </ScrollViewer>
+                                <Panel x:Name="Forms_p1_B" HorizontalAlignment="Stretch" Grid.Column="1" />
+                            </Grid>
+                            <Panel Margin="0,5,0,0" x:Name="Forms_p1_X" VerticalAlignment="Stretch"
+                                   HorizontalAlignment="Stretch" Grid.Row="1">
+                            </Panel>
+                        </Grid>
+                    </Panel>
+                </TabItem>
+                <TabItem x:Name="Forms2" Header="Формы 2">
+                    <Panel x:Name="Forms_p2" VerticalAlignment="Stretch">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" MinHeight="220" />
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+                            <Grid Grid.Row="0">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="3*" />
+                                    <ColumnDefinition Width="2.2*" MaxWidth="625" />
+                                </Grid.ColumnDefinitions>
+                                <ScrollViewer>
+                                    <Panel x:Name="Forms_p2_0" Grid.Column="0" />
+                                </ScrollViewer>
+                                <Panel x:Name="Forms_p2_B" Grid.Column="1" />
+                            </Grid>
+                            <Panel Margin="0,5,0,0" x:Name="Forms_p2_X" VerticalAlignment="Stretch" Grid.Row="1" />
+                        </Grid>
+                    </Panel>
+                </TabItem>
+            </TabControl>
+        </Panel>
+    </DockPanel>
 </Window>
