--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -24,8 +24,8 @@
                     <MenuItem Header="Изменить расположение паспортов по умолчанию" Command="{Binding ChangePasFolder}"></MenuItem>
                 </MenuItem>
                 <MenuItem Header="Список организаций" Command="{Binding ExcelExportListOfOrgs}"></MenuItem>
-                <MenuItem Header="Список форм 1" Command="{Binding ExcelExportAllForms1}"></MenuItem>
-                <MenuItem Header="Список форм 2" Command="{Binding ExcelExportAllForms2}"></MenuItem>
+                <MenuItem Header="Список форм 1" Command="{Binding ExcelExportListOfForms1}"></MenuItem>
+                <MenuItem Header="Список форм 2" Command="{Binding ExcelExportListOfForms2}"></MenuItem>
                 <MenuItem Header="Разрывы и пересечения" Command="{Binding ExcelExportIntersections}"></MenuItem>
                 <MenuItem Header="Формы 1">
                     <MenuItem Header="Форма 1.1" Command="{Binding ExcelExportForms}" CommandParameter="1.1"></MenuItem>
