--- a/Client_App/App.axaml
+++ b/Client_App/App.axaml
@@ -1,14 +1,19 @@
-<Application xmlns="https://github.com/avaloniaui"
+<Application x:Class="Client_App.App"
+             xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="using:Client_App"
-             x:Class="Client_App.App">
-    <Application.DataTemplates>
-        <local:ViewLocator/>
-    </Application.DataTemplates>
+             xmlns:v="clr-namespace:Client_App.Views"
+             xmlns:vm="clr-namespace:Client_App.ViewModels">
+    <Application.Resources>
+        <ResourceDictionary>
+            <DataTemplate DataType="{x:Type vm:AnnualReportsVM}">
+                <v:AnnualReportsView/>
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type vm:OperReportsVM}">
+                <v:OperReportsView/>
+            </DataTemplate>
+        </ResourceDictionary>
+    </Application.Resources>
 
-  <Application.Styles>
-    <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
-    <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseLight.xaml"/>
-    <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Default.xaml"/>
-  </Application.Styles>
+    
 </Application>
