--- a/Client_App/Views/AnnualReportsView.axaml
+++ b/Client_App/Views/AnnualReportsView.axaml
@@ -3,10 +3,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="clr-namespace:Client_App.ViewModels"
-             d:DataContext="{d:DesignInstance vm:OperReportsVM}"
+             d:DataContext="{d:DesignInstance vm:AnnualReportsVM}"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="Client_App.Views.OperReportsView">
+             x:Class="Client_App.Views.AnnualReportsView">
     <Grid>
-        <TextBlock Text="tab1"></TextBlock>
+        <TextBlock Text="tab2"></TextBlock>
     </Grid>
 </UserControl>
