--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -52,6 +52,7 @@
                     <MenuItem Header="Форма 2.11" Command="{Binding ExcelExportForms}" CommandParameter="2.11"></MenuItem>
                     <MenuItem Header="Форма 2.12" Command="{Binding ExcelExportForms}" CommandParameter="2.12"></MenuItem>
                 </MenuItem>
+                <MenuItem Header="Все формы" Command="{Binding ExcelExportAll}"/>
                 <MenuItem Header="Выбранная организация">
                     <MenuItem Header="Формы 1">
                         <MenuItem Header="Форма 1.1" Command="{Binding ExcelExportForms}" CommandParameter="Org1.1"></MenuItem>
@@ -78,7 +79,7 @@
                         <MenuItem Header="Форма 2.11" Command="{Binding ExcelExportForms}" CommandParameter="Org2.11"></MenuItem>
                         <MenuItem Header="Форма 2.12" Command="{Binding ExcelExportForms}" CommandParameter="Org2.12"></MenuItem>
                     </MenuItem>
-                    <MenuItem Header="Все формы" Command="{Binding ExcelExportSelectedOrgAll}" />
+                    <MenuItem Header="Все формы" Command="{Binding ExcelExportAll}" CommandParameter="SelectedOrg"/>
                 </MenuItem>
             </MenuItem>
         </Menu>
