--- a/Client_App/Views/OnStartProgressBar.axaml
+++ b/Client_App/Views/OnStartProgressBar.axaml
@@ -2,14 +2,19 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:vm="using:Client_App.ViewModels"
         mc:Ignorable="d" d:DesignWidth="300" d:DesignHeight="30"
 		Width="300"
 		Height="30"
-		WindowStartupLocation="CenterScreen"
         x:Class="Client_App.Views.OnStartProgressBar"
-		HasSystemDecorations="False">
-	<Panel>
-		<ProgressBar  Maximum="100" Minimum="0" Height="40" Value="{Binding OnStartProgressBar}"></ProgressBar>
-		<TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" Text="{Binding LoadStatus}"/>
+        SystemDecorations="None">
+
+    <Design.DataContext>
+        <vm:OnStartProgressBarVM/>
+    </Design.DataContext>
+
+    <Panel>
+		<ProgressBar  Maximum="100" Minimum="0" Height="40" Value="{Binding OnStartProgressBar, Mode=OneWay}"></ProgressBar>
+		<TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" Text="{Binding LoadStatus, Mode=OneWay}"/>
     </Panel>
 </Window>
