--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -18,6 +18,7 @@
             <MenuItem Header="_Импорт" FontSize="14">
                 <MenuItem Header="Из RAODB" Command="{Binding ImportRaodb}" />
                 <MenuItem Header="Из Excel" Command="{Binding ImportExcel}" />
+                <MenuItem Header="Из Json" Command="{Binding ImportJson}" />
             </MenuItem>
             <MenuItem Header="_Excel" FontSize="14">
                 <MenuItem Header="Паспорта">
