--- a/Client_App/App.axaml
+++ b/Client_App/App.axaml
@@ -6,9 +6,7 @@
         <local:ViewLocator/>
     </Application.DataTemplates>
 
-  <Application.Styles>
-    <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
-    <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseLight.xaml"/>
-    <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Default.xaml"/>
-  </Application.Styles>
+    <Application.Styles>
+        <SimpleTheme/>
+    </Application.Styles>
 </Application>
