fix mainwindow size by default

--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -4,7 +4,7 @@
         xmlns:Controls="using:Client_App.Controls.DataGrid"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="800"
+        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="800" Height="855"
         MinHeight="200" MinWidth="200"
         x:Class="Client_App.Views.MainWindow"
         Icon="/Assets/logo.png"
