--- a/Client_App/Views/ProgressBar/ExcelExportProgressBar.axaml
+++ b/Client_App/Views/ProgressBar/ExcelExportProgressBar.axaml
@@ -55,8 +55,7 @@
                 Padding="0,5"
                 IsEnabled="True"
                 Content="Отмена"
-                Command="{Binding ExcelExportCancel, Mode=OneWay}"
-                CommandParameter="{Binding CancellationToken, Mode=OneWay}"/>
+                Command="{Binding ExcelExportCancel, Mode=OneWay}"/>
         </Grid>
     </Grid>
 </Window>
