--- a/Client_App/Views/CheckForm.axaml
+++ b/Client_App/Views/CheckForm.axaml
@@ -4,69 +4,72 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:vm ="clr-namespace:Client_App.ViewModels"
-    xmlns:v ="clr-namespace:Client_App.Views"
+    xmlns:converters="clr-namespace:Client_App.VisualRealization.Converters"
+    xmlns:v="clr-namespace:Client_App.Views"
+    xmlns:vm="clr-namespace:Client_App.ViewModels"
     Name="FormCheckerWindow"
     Title="{Binding Path=TitleName, Mode=OneWay}"
     Width="714"
     Height="889"
-    WindowStartupLocation="CenterScreen"
-    d:DataContext="{d:DesignInstance Type=vm:CheckFormVM}"
     x:DataType="vm:CheckFormVM"
+    WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
+
+    <Design.DataContext>
+        <vm:CheckFormVM/>
+    </Design.DataContext>
 
     <Grid>
         <DataGrid
+            Name="DtgCheck"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
             CanUserReorderColumns="True"
             CanUserResizeColumns="True"
             CanUserSortColumns="True"
             GridLinesVisibility="All"
-            HorizontalAlignment="Left"
             IsReadOnly="True"
-            Items ="{Binding Path=CheckError, Mode=OneWay}"
-            Name="DtgCheck"
-            VerticalAlignment="Top">
+            Items="{Binding Path=CheckError, Mode=OneWay}">
             <DataGrid.Styles>
                 <Style Selector="TextBlock">
-                    <Setter Property="TextWrapping"
-                            Value="WrapWithOverflow"/>
+                    <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
                 </Style>
             </DataGrid.Styles>
             <DataGrid.Columns>
                 <DataGridTextColumn
+                    Width="0.8*"
                     Binding="{Binding Path=Index, Mode=OneWay}"
                     CellStyleClasses="cell_tooltip"
                     FontSize="11"
                     FontWeight="Bold"
-                    Header="№ п/п"
-                    Width="0.8*"/>
-                <DataGridTextColumn
-                    Binding="{Binding Path=Row, Mode=OneWay}"
+                    Header="№ п/п"/>
+                <DataGridTextColumn 
+                    Width="*"
+                    Binding="{Binding Path=Row, Mode=TwoWay}"
                     CellStyleClasses="cell_tooltip"
                     FontSize="11"
                     FontWeight="Bold"
-                    Header="стр."
-                    Width="*"/>
+                    Header="стр."/>
                 <DataGridTextColumn
+                    Width="2.5*"
                     Binding="{Binding Path=Column, Mode=OneWay}"
                     CellStyleClasses="cell_tooltip"
                     FontSize="11"
                     FontWeight="Bold"
-                    Header="Графа"
-                    Width="2.5*"/>
+                    Header="Графа"/>
                 <DataGridTextColumn
+                    Width="3*"
                     Binding="{Binding Path=Value, Mode=OneWay}"
                     CellStyleClasses="cell_tooltip"
                     FontSize="11"
                     FontWeight="Bold"
-                    Header="Значение"
-                    Width="3*"/>
+                    Header="Значение"/>
                 <DataGridTextColumn
+                    Width="10*"
                     Binding="{Binding Path=Message, Mode=OneWay}"
                     CellStyleClasses="cell_tooltip"
                     FontSize="11"
-                    Header="Сообщение"
-                    Width="10*"/>
+                    Header="Сообщение"/>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
