--- a/Client_App/Views/CompareReportsTitleForm.axaml
+++ b/Client_App/Views/CompareReportsTitleForm.axaml
@@ -4,9 +4,12 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:tools="clr-namespace:Client_App.Tools"
+    xmlns:type="clr-namespace:Client_App.Tools.ConverterType"
     xmlns:vm="clr-namespace:Client_App.ViewModels"
     Title="{Binding Title, Mode=OneTime}"
-    Width="950"
+    Width="{Binding Source={x:Type type:Width}, Converter={tools:RatioConverter}, ConverterParameter='0.5', FallbackValue='600', Mode=OneTime}"
+    Height="{Binding Source={x:Type type:Height}, Converter={tools:RatioConverter}, ConverterParameter='0.75', FallbackValue='800', Mode=OneTime}"
     MinWidth="950"
     MinHeight="600"
     x:CompileBindings="True"
@@ -50,8 +53,7 @@
                     Margin="0,0,5,0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
-                    Text=""/>
-                <!--  #bind OrganUprav_DB  -->
+                    Text="{Binding OrganUprav}"/>
                 <TextBlock
                     Grid.Row="1"
                     Grid.Column="0"
@@ -97,6 +99,7 @@
                 </WrapPanel>
             </Grid>
         </Border>
+        <!--  ScrollData  -->
         <ScrollViewer
             Grid.Row="1"
             MinHeight="400"
@@ -104,6 +107,42 @@
             VerticalContentAlignment="Stretch"
             VerticalScrollBarVisibility="Hidden">
             <StackPanel>
+                <!--  Орган управления  -->
+                <Border
+                    Margin="5"
+                    Padding="3"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"
+                    BorderBrush="Black"
+                    BorderThickness="1"
+                    CornerRadius="5">
+                    <Grid ColumnDefinitions="210,300,75,300" VerticalAlignment="Center">
+                        <TextBlock
+                            Grid.Column="0"
+                            Height="40"
+                            Margin="5,2,0,0"
+                            IsEnabled="False"
+                            TextWrapping="Wrap"
+                            Text="Орган управления использованием атомной энергии"/>
+                        <TextBox
+                            Grid.Column="1"
+                            Height="26"
+                            Margin="0,0,0,3"
+                            IsReadOnly="True"
+                            Text="{Binding OldOrganUprav, Mode=OneWay}"/>
+                        <CheckBox
+                            Grid.Column="2"
+                            Margin="0,3,0,6"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            IsChecked="{Binding ReplaceOrganUprav, Mode=TwoWay}"/>
+                        <TextBox
+                            Grid.Column="3"
+                            Height="26"
+                            Margin="0,0,0,3"
+                            Text="{Binding NewOrganUprav, Mode=TwoWay}"/>
+                    </Grid>
+                </Border>
                 <!--  Юридическое лицо  -->
                 <Border
                     Margin="5"
@@ -113,7 +152,7 @@
                     BorderBrush="Black"
                     BorderThickness="1"
                     CornerRadius="5">
-                    <Grid ColumnDefinitions="200,300,75,300" RowDefinitions="*,*">
+                    <Grid ColumnDefinitions="210,300,75,300" RowDefinitions="*,*">
                         <!--  Юридическое лицо - Наименования полей  -->
                         <TextBlock
                             Grid.Row="0"
@@ -132,7 +171,6 @@
                             <TextBlock
                                 Height="32"
                                 Margin="5,0"
-                                IsEnabled="False"
                                 Text="Субъект Российской федерации"/>
                             <TextBlock
                                 Height="32"
@@ -483,7 +521,7 @@
                     BorderBrush="Black"
                     BorderThickness="1"
                     CornerRadius="5">
-                    <Grid ColumnDefinitions="200,300,75,300" RowDefinitions="*,*">
+                    <Grid ColumnDefinitions="210,300,75,300" RowDefinitions="*,*">
                         <!--  Территориальное обособленное подразделение - Наименования полей  -->
                         <TextBlock
                             Grid.Row="0"
@@ -502,7 +540,6 @@
                             <TextBlock
                                 Height="32"
                                 Margin="5,0"
-                                IsEnabled="False"
                                 Text="Субъект Российской федерации"/>
                             <TextBlock
                                 Height="32"
@@ -675,7 +712,7 @@
                                 HorizontalAlignment="Center"
                                 VerticalAlignment="Center"
                                 Text="Заменить"/>
-                            <ListBox BorderThickness="0">
+                            <ListBox BorderThickness="0" IsHitTestVisible="False">
                                 <CheckBox
                                     Margin="0,3,0,6"
                                     HorizontalAlignment="Center"
